pkg/k8s/kustomize/subnet-operator-hostname/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operator-hostname
  labels:
    app.kubernetes.io/name: hostname
    app.kubernetes.io/instance: hostname-service
    app.kubernetes.io/component: operator
    app.kubernetes.io/part-of: provider
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: hostname
      app.kubernetes.io/instance: hostname-service
      app.kubernetes.io/component: operator
      app.kubernetes.io/part-of: provider
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hostname
        app.kubernetes.io/instance: hostname-service
        app.kubernetes.io/component: operator
        app.kubernetes.io/part-of: provider
    spec:
      serviceAccountName: operator-hostname
      containers:
        - name: operator-hostname
          image: u2udepin/subnet-node:latest
          imagePullPolicy: IfNotPresent
          command:
            - "./subnet"
          args: ["k8s-services", "operator", "hostname"]
          ports:
            - name: rest
              containerPort: 8080
