pkg/k8s/kustomize/subnet-operator-hostname/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subnet-hostname-operator
  annotations:
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"

spec:
  ingressClassName: "subnet-node-ingress-class"
  rules:
    - host: subnet-hostname-operator.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: subnet-hostname-operator
                port:
                  name: status
